--- a/index.html
+++ b/index.html
@@ -5,207 +5,344 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Coeur Ouvert</title>
 
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Dancing+Script&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+
 <style>
+  :root {
+    --gold-accent: #f5a623;
+    --gold-dark: #c48a18; /* jaune plus foncé */
+    --green-dark: #3b6b11; /* vert foncé */
+    --green-dark-text: #ffffff; /* blanc pour texte vert bouton */
+    --blue-main: #2a6ebb;
+    --gray-light: #f7f7f7;
+    --text-color: #000000;
+    --muted: #666666;
+    --slogan-color: #ff0000; /* rouge vif pour slogan */
+  }
+
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+
   body {
     font-family: 'Open Sans', sans-serif;
-    background: #fff;
-    margin: 20px;
-    color: #000;
+    background: linear-gradient(180deg, #ffffff 0%, #fbfbfb 100%);
+    color: var(--text-color);
+    line-height: 1.6;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
   }
-  .container {
-    max-width: 900px;
-    margin: 0 auto;
-  }
+
   header {
+    max-width: 900px;
+    margin: 36px auto 8px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    flex-wrap: wrap;
     text-align: center;
   }
+
   header img.logo {
     height: 80px;
+    width: auto;
+    flex-shrink: 0;
   }
+
   header h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 3rem;
-  }
-  header p.slogan {
-    color: red; /* Pour voir l'effet */
-    font-size: 1.3rem;
-    font-family: 'Dancing Script', cursive;
+    font-weight: 700;
+    font-size: 3.8rem;
+    letter-spacing: 1.5px;
+    color: var(--text-color);
+    line-height: 1;
   }
 
-  nav ul {
+  header p.slogan {
+    width: 100%;
+    font-family: 'Dancing Script', cursive;
+    font-size: 1.25rem;
+    color: var(--slogan-color);
+    margin-top: -8px;  /* plus proche du titre */
+    margin-bottom: 0;
+    letter-spacing: 0.02em;
+  }
+
+  nav {
+    max-width: 900px;
+    margin: 16px auto 28px;
+    padding: 0 20px;
+  }
+
+  .menu {
     list-style: none;
     display: flex;
-    gap: 30px;
     justify-content: center;
-    padding: 0;
-    margin: 20px 0;
+    gap: 36px;
+    align-items: center;
   }
-  nav a {
-    text-decoration: none;
+
+  .menu li a {
+    color: var(--text-color);
     font-weight: 600;
-    color: black;
+    font-size: 1.05rem;
+    text-decoration: none;
+    padding: 6px 4px;
+    position: relative;
+    transition: color .22s ease;
   }
 
-  /* CONTENEUR VERSET + MISSION */
-  .top-flex {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
+  .menu li a::after {
+    content: "";
+    height: 2px;
+    width: 0;
+    background: var(--gold-accent);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -6px;
+    transition: width .22s ease;
+    border-radius: 2px;
   }
 
-  /* Verset */
-  #verse-box {
-    flex: 0 0 280px;
-    background: #f7f7f7;
-    border-radius: 10px;
-    padding: 15px;
-    font-family: Georgia, serif;
-    font-style: italic;
-    color: #5a2e00;
-    height: 520px; /* 2x environ la hauteur image mission */
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  .menu li a:hover,
+  .menu li a:focus {
+    color: var(--gold-accent);
+    outline: none;
   }
-  #verse-box h3 {
-    font-family: 'Playfair Display', serif;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-    color: #000;
+
+  .menu li a:hover::after,
+  .menu li a:focus::after {
+    width: 60%;
   }
+
   #daily-verse {
-    margin-bottom: 30px;
-    font-size: 1.3rem;
-    line-height: 1.4;
-  }
-  #daily-encouragement {
-    font-style: normal;
-    font-size: 1rem;
-    color: #3a2a2a;
-    flex-grow: 1;
-  }
-
-  /* Mission (image + texte) */
-  #mission {
-    flex: 1;
-    background: #f7f7f7;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #mission img {
-    max-width: 100%;
-    height: 260px;
-    object-fit: contain;
-    border-radius: 8px;
-    margin-bottom: 10px;
-  }
-  #mission p {
+    max-width: 900px;
+    margin: 0 auto 42px;
+    padding: 20px 28px;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.28rem;
+    color: #5a2e00;
+    background-image: linear-gradient(to right, white 14%, #FFECB9 50%, white 86%);
+    border-radius: 12px;
+    font-family: Georgia, serif;
     text-align: center;
-  }
-  #mission h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 1.5rem;
-    margin-bottom: 12px;
+    position: relative;
+    z-index: 1;
+    overflow: visible;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.06);
   }
 
-  /* Les 2 autres sections en dessous de la mission */
-  .bottom-flex {
+  #daily-verse::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 64%;
+    height: 76%;
+    border-radius: 12px;
+    background: radial-gradient(circle, rgba(255,222,146,0.45) 0%, transparent 60%);
+    z-index: -1;
+    pointer-events: none;
+  }
+
+  #daily-verse::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 58%;
+    height: 18px;
+    border-radius: 50%;
+    background: rgba(0,0,0,0.12);
+    filter: blur(8px);
+    z-index: -2;
+    pointer-events: none;
+  }
+
+  main {
+    max-width: 900px;
+    margin: 0 auto 56px;
+    padding: 0 20px;
+  }
+
+  .intro {
+    background: var(--gray-light);
+    border-radius: 12px;
+    padding: 22px;
+    margin-bottom: 30px;
+    text-align: center;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.03);
+  }
+
+  .intro p { margin-bottom: 12px; color: #222; }
+  .intro p.lead { font-weight: 600; font-size: 1.05rem; color: #111; }
+
+  .flex-row {
     display: flex;
     gap: 20px;
-    margin-top: 20px;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
   }
+
   .section-block {
-    background: #f7f7f7;
-    border-radius: 10px;
-    padding: 10px;
-    flex: 1;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    background: var(--gray-light);
+    border-radius: 14px;
+    padding: 14px;
+    flex: 1 1 30%;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.04);
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 220px;
+    transition: transform 1s ease, box-shadow 1s ease, opacity 1s ease; /* fade plus long */
+    opacity: 0;
+    transform: translateY(10px);
   }
-  .section-block img {
-    max-width: 100%;
-    height: 260px;
-    object-fit: contain;
-    border-radius: 8px;
-    margin-bottom: 10px;
+
+  /* Fade-in animation trigger class */
+  .section-block.visible {
+    opacity: 1;
+    transform: translateY(0);
   }
+
   .section-block h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 1.3rem;
-    margin-bottom: 12px;
-  }
-  .section-block p {
+    font-size: 1.35rem;
+    margin-bottom: 10px;
     text-align: center;
+    color: var(--text-color);
   }
 
-  /* Responsive */
-  @media (max-width: 800px) {
-    .top-flex, .bottom-flex {
+  .section-block img {
+    width: 100%;
+    max-width: 320px; /* un peu plus large */
+    border-radius: 10px;
+    object-fit: contain;
+    height: 220px; /* plus grand */
+    margin-bottom: 12px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+  }
+
+  .section-block p {
+    font-size: 0.995rem;
+    color: #222;
+    text-align: center;
+    margin-top: auto;
+  }
+
+  /* Boutons sous la mission */
+  .btn-row {
+    max-width: 900px;
+    margin: 20px auto 56px;
+    padding: 0 20px;
+    display: flex;
+    gap: 18px;
+    justify-content: center;
+  }
+
+  .btn-primary {
+    display: inline-block;
+    font-weight: 400; /* plus normal */
+    padding: 12px 28px;
+    border-radius: 28px;
+    text-decoration: none;
+    transition: transform .18s ease, box-shadow .18s ease;
+    box-shadow: 0 6px 16px rgba(0,0,0,0.12);
+  }
+
+  .btn-yellow {
+    background-color: var(--gold-dark);
+    color: #fff;
+    box-shadow: 0 6px 16px rgba(196, 138, 24, 0.7);
+  }
+  .btn-yellow:hover,
+  .btn-yellow:focus {
+    background-color: #b27f0e;
+    box-shadow: 0 10px 22px rgba(178, 127, 14, 0.9);
+    outline: none;
+  }
+
+  .btn-green {
+    background-color: var(--green-dark);
+    color: var(--green-dark-text);
+    box-shadow: 0 6px 16px rgba(59, 107, 17, 0.7);
+  }
+  .btn-green:hover,
+  .btn-green:focus {
+    background-color: #2f590e;
+    box-shadow: 0 10px 22px rgba(47, 89, 14, 0.9);
+    outline: none;
+  }
+
+  footer {
+    text-align: center;
+    padding: 26px 16px;
+    color: var(--muted);
+    font-size: 0.92rem;
+  }
+
+  /* Responsive tweaks */
+  @media (max-width: 900px) {
+    .section-block { flex: 1 1 45%; }
+  }
+
+  @media (max-width: 640px) {
+    header h1 { font-size: 2.2rem; }
+    header img.logo { height: 72px; }
+    .section-block { flex: 1 1 100%; max-width: 100%; }
+    .section-block img { height: auto; object-fit: contain; }
+    .btn-row {
       flex-direction: column;
-    }
-    #verse-box {
-      height: auto;
-      margin-bottom: 20px;
-    }
-    #mission img, .section-block img {
-      height: auto;
+      gap: 12px;
     }
   }
+
 </style>
 </head>
 <body>
 
-  <div class="container">
+  <!-- Header -->
+  <header>
+    <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
+    <h1>Coeur Ouvert</h1>
+    <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
+  </header>
 
-    <header>
-      <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
-      <h1>Coeur Ouvert</h1>
-      <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
-    </header>
+  <!-- Menu -->
+  <nav>
+    <ul class="menu">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="coaching.html">Coaching Spirituel</a></li>
+      <li><a href="ressources.html">Ressources</a></li>
+      <li><a href="temoignages.html">Témoignages</a></li>
+    </ul>
+  </nav>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="coaching.html">Coaching Spirituel</a></li>
-        <li><a href="ressources.html">Ressources</a></li>
-        <li><a href="temoignages.html">Témoignages</a></li>
-      </ul>
-    </nav>
+  <!-- Verset du jour -->
+  <div id="daily-verse">Chargement du verset...</div>
 
-    <!-- Ligne principale verset + mission -->
-    <div class="top-flex">
+  <!-- Main content -->
+  <main>
+    <div class="intro" role="region" aria-labelledby="intro-title">
+      <p class="lead"><strong>Tu es une personne de valeur.</strong></p>
+      <p>Nous savons que la vie peut être lourde, pleine de blessures, de doutes et de questions sans réponse. <strong>Coeur Ouvert</strong> est un espace où tu peux déposer tes fardeaux, partager ce que tu vis et trouver des réponses qui restaurent ton cœur.</p>
+      <p>Nous t’accompagnons grâce à l’écoute bienveillante de nos conseillers, la prière (si tu le souhaites), des paroles d’encouragement et des témoignages réels de transformation.</p>
+    </div>
 
-      <aside id="verse-box" role="complementary" aria-label="Verset et encouragement du jour">
-        <h3>Verset du jour</h3>
-        <div id="daily-verse">Chargement du verset...</div>
-
-        <h3>Encouragement du jour</h3>
-        <div id="daily-encouragement">
-          Rappelle-toi que chaque jour est une nouvelle chance de recommencer et d'avancer avec foi et courage.
-        </div>
-      </aside>
-
-      <section id="mission" aria-labelledby="mission-title">
+    <div class="flex-row" aria-live="polite">
+      <section class="section-block" aria-labelledby="mission-title">
         <h2 id="mission-title">Notre mission</h2>
         <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
         <p>Faire découvrir l’amour de Dieu : pas pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
       </section>
 
-    </div>
-
-    <!-- Ligne en dessous : les deux autres sections -->
-    <div class="bottom-flex">
       <section class="section-block" aria-labelledby="comme-dieu-title">
         <h2 id="comme-dieu-title">Comme Dieu te voit</h2>
         <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
@@ -219,13 +356,58 @@
       </section>
     </div>
 
-  </div>
+    <!-- Boutons -->
+    <div class="btn-row" role="region" aria-label="Actions">
+      <a href="coaching.html" class="btn-primary btn-yellow" role="button">Parler à un conseiller</a>
+      <a href="temoignages.html" class="btn-primary btn-green" role="button">Lire des témoignages</a>
+    </div>
+  </main>
 
+  <footer>
+    &copy; 2025 Coeur Ouvert — <a href="contact.html">Contact</a>
+  </footer>
+
+  <!-- Verset script -->
   <script>
-    // Exemple simplifié pour charger un verset (tu remplaces par ta logique)
     document.addEventListener("DOMContentLoaded", function () {
-      // Pour démo, un verset statique
-      document.getElementById("daily-verse").textContent = "Psaume 23:1 - L'Éternel est mon berger, je ne manquerai de rien.";
+      fetch("verses.json")
+        .then(response => {
+          if (!response.ok) {
+            throw new Error("Erreur lors du chargement du fichier JSON");
+          }
+          return response.json();
+        })
+        .then(data => {
+          let today = new Date();
+          let dayOfYear = Math.floor(
+            (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
+          );
+          let verseIndex = dayOfYear % data.length;
+          document.getElementById("daily-verse").textContent =
+            data[verseIndex].reference + " - " + data[verseIndex].texte;
+        })
+        .catch(error => {
+          console.error(error);
+          document.getElementById("daily-verse").textContent =
+            "Impossible de charger le verset du jour.";
+        });
+    });
+  </script>
+
+  <!-- Fade-in on scroll script -->
+  <script>
+    function onEntry(entry) {
+      entry.forEach(change => {
+        if (change.isIntersecting) {
+          change.target.classList.add('visible');
+        }
+      });
+    }
+
+    let options = { threshold: [0.2] };
+    let observer = new IntersectionObserver(onEntry, options);
+    document.querySelectorAll('.section-block').forEach(block => {
+      observer.observe(block);
     });
   </script>
 
