--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <style>
   :root {
     --gold-accent: #f5a623;
-    --gold-dark: #c48a18; /* jaune plus foncé */
-    --green-dark: #3b6b11; /* vert foncé */
-    --green-dark-text: #ffffff; /* blanc pour texte vert bouton */
     --blue-main: #2a6ebb;
     --gray-light: #f7f7f7;
+    --gray-verse-bg: #e0e0e0;
     --text-color: #000000;
     --muted: #666666;
-    --slogan-color: #ff0000; /* rouge vif pour slogan */
+    --slogan-color: #b35d5d;
   }
 
   * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -42,6 +40,7 @@
     gap: 18px;
     flex-wrap: wrap;
     text-align: center;
+    animation: fadeInUp .6s ease both;
   }
 
   header img.logo {
@@ -62,17 +61,17 @@
   header p.slogan {
     width: 100%;
     font-family: 'Dancing Script', cursive;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     color: var(--slogan-color);
-    margin-top: -8px;  /* plus proche du titre */
+    margin-top: -10px;  /* plus proche du titre */
     margin-bottom: 0;
-    letter-spacing: 0.02em;
   }
 
   nav {
     max-width: 900px;
     margin: 16px auto 28px;
     padding: 0 20px;
+    animation: fadeInUp .65s ease both;
   }
 
   .menu {
@@ -117,59 +116,37 @@
     width: 60%;
   }
 
-  #daily-verse {
-    max-width: 900px;
-    margin: 0 auto 42px;
-    padding: 20px 28px;
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.28rem;
-    color: #5a2e00;
-    background-image: linear-gradient(to right, white 14%, #FFECB9 50%, white 86%);
-    border-radius: 12px;
-    font-family: Georgia, serif;
-    text-align: center;
-    position: relative;
-    z-index: 1;
-    overflow: visible;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.06);
-  }
-
-  #daily-verse::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 64%;
-    height: 76%;
-    border-radius: 12px;
-    background: radial-gradient(circle, rgba(255,222,146,0.45) 0%, transparent 60%);
-    z-index: -1;
-    pointer-events: none;
-  }
-
-  #daily-verse::after {
-    content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 58%;
-    height: 18px;
-    border-radius: 50%;
-    background: rgba(0,0,0,0.12);
-    filter: blur(8px);
-    z-index: -2;
-    pointer-events: none;
-  }
-
-  main {
+  /* Conteneur principal flex pour 2 colonnes */
+  .content-wrapper {
     max-width: 900px;
     margin: 0 auto 56px;
     padding: 0 20px;
+    display: flex;
+    gap: 30px;
+    align-items: flex-start;
   }
 
+  /* Colonne gauche : contenu principal */
+  .left-column {
+    flex: 1 1 65%;
+  }
+
+  /* Colonne droite : verset */
+  .right-column {
+    flex: 0 0 30%;
+    background-color: var(--gray-verse-bg);
+    border-radius: 12px;
+    padding: 20px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.05);
+    font-family: Georgia, serif;
+    font-size: 1.2rem;
+    color: #4b3b00;
+    min-height: 350px;
+    position: sticky;
+    top: 80px; /* Reste visible quand scroll */
+  }
+
+  /* Intro */
   .intro {
     background: var(--gray-light);
     border-radius: 12px;
@@ -177,6 +154,7 @@
     margin-bottom: 30px;
     text-align: center;
     box-shadow: 0 6px 20px rgba(0,0,0,0.03);
+    animation: fadeInUp .75s ease both;
   }
 
   .intro p { margin-bottom: 12px; color: #222; }
@@ -200,7 +178,7 @@
     flex-direction: column;
     align-items: center;
     min-width: 220px;
-    transition: transform 1s ease, box-shadow 1s ease, opacity 1s ease; /* fade plus long */
+    transition: transform .22s ease, box-shadow .22s ease, opacity 1s ease;
     opacity: 0;
     transform: translateY(10px);
   }
@@ -222,10 +200,10 @@
 
   .section-block img {
     width: 100%;
-    max-width: 320px; /* un peu plus large */
+    max-width: 320px;
     border-radius: 10px;
-    object-fit: contain;
-    height: 220px; /* plus grand */
+    object-fit: cover;
+    height: 180px;
     margin-bottom: 12px;
     box-shadow: 0 6px 18px rgba(0,0,0,0.06);
   }
@@ -239,71 +217,57 @@
 
   /* Boutons sous la mission */
   .btn-row {
-    max-width: 900px;
-    margin: 20px auto 56px;
+    margin-top: 30px;
     padding: 0 20px;
     display: flex;
     gap: 18px;
     justify-content: center;
+    animation: fadeInUp .8s ease both;
   }
 
   .btn-primary {
     display: inline-block;
-    font-weight: 400; /* plus normal */
+    background-color: var(--gold-accent);
+    color: white;
+    font-weight: 400;
     padding: 12px 28px;
     border-radius: 28px;
     text-decoration: none;
     transition: transform .18s ease, box-shadow .18s ease;
-    box-shadow: 0 6px 16px rgba(0,0,0,0.12);
+    box-shadow: 0 6px 16px rgba(245,166,35,0.25);
   }
 
-  .btn-yellow {
-    background-color: var(--gold-dark);
-    color: #fff;
-    box-shadow: 0 6px 16px rgba(196, 138, 24, 0.7);
-  }
-  .btn-yellow:hover,
-  .btn-yellow:focus {
-    background-color: #b27f0e;
-    box-shadow: 0 10px 22px rgba(178, 127, 14, 0.9);
-    outline: none;
+  .btn-primary:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 22px rgba(245,166,35,0.32);
   }
 
-  .btn-green {
-    background-color: var(--green-dark);
-    color: var(--green-dark-text);
-    box-shadow: 0 6px 16px rgba(59, 107, 17, 0.7);
-  }
-  .btn-green:hover,
-  .btn-green:focus {
-    background-color: #2f590e;
-    box-shadow: 0 10px 22px rgba(47, 89, 14, 0.9);
-    outline: none;
-  }
-
-  footer {
-    text-align: center;
-    padding: 26px 16px;
-    color: var(--muted);
-    font-size: 0.92rem;
+  .btn-secondary {
+    background: #6fbf6f;
+    box-shadow: 0 6px 16px rgba(111,191,111,0.22);
+    color: white;
+    font-weight: 400;
   }
 
   /* Responsive tweaks */
   @media (max-width: 900px) {
-    .section-block { flex: 1 1 45%; }
-  }
-
-  @media (max-width: 640px) {
-    header h1 { font-size: 2.2rem; }
-    header img.logo { height: 72px; }
-    .section-block { flex: 1 1 100%; max-width: 100%; }
-    .section-block img { height: auto; object-fit: contain; }
-    .btn-row {
+    .content-wrapper {
       flex-direction: column;
-      gap: 12px;
+    }
+    .right-column {
+      position: relative;
+      top: auto;
+      flex: 1 1 100%;
+      min-height: auto;
+      margin-top: 40px;
     }
   }
 
+  /* Simple fadeInUp animation */
+  @keyframes fadeInUp {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
 </style>
 </head>
 <body>
@@ -325,43 +289,51 @@
     </ul>
   </nav>
 
-  <!-- Verset du jour -->
-  <div id="daily-verse">Chargement du verset...</div>
+  <!-- Conteneur principal -->
+  <div class="content-wrapper">
 
-  <!-- Main content -->
-  <main>
-    <div class="intro" role="region" aria-labelledby="intro-title">
-      <p class="lead"><strong>Tu es une personne de valeur.</strong></p>
-      <p>Nous savons que la vie peut être lourde, pleine de blessures, de doutes et de questions sans réponse. <strong>Coeur Ouvert</strong> est un espace où tu peux déposer tes fardeaux, partager ce que tu vis et trouver des réponses qui restaurent ton cœur.</p>
-      <p>Nous t’accompagnons grâce à l’écoute bienveillante de nos conseillers, la prière (si tu le souhaites), des paroles d’encouragement et des témoignages réels de transformation.</p>
+    <!-- Colonne gauche -->
+    <div class="left-column">
+      <div class="intro" role="region" aria-labelledby="intro-title">
+        <p class="lead"><strong>Tu es une personne de valeur.</strong></p>
+        <p>Nous savons que la vie peut être lourde, pleine de blessures, de doutes et de questions sans réponse. <strong>Coeur Ouvert</strong> est un espace où tu peux déposer tes fardeaux, partager ce que tu vis et trouver des réponses qui restaurent ton cœur.</p>
+        <p>Nous t’accompagnons grâce à l’écoute bienveillante de nos conseillers, la prière (si tu le souhaites), des paroles d’encouragement et des témoignages réels de transformation.</p>
+      </div>
+
+      <div class="flex-row" aria-live="polite">
+        <section class="section-block" aria-labelledby="mission-title">
+          <h2 id="mission-title">Notre mission</h2>
+          <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
+          <p>Faire découvrir l’amour de Dieu : pas pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
+        </section>
+
+        <section class="section-block" aria-labelledby="comme-dieu-title">
+          <h2 id="comme-dieu-title">Comme Dieu te voit</h2>
+          <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
+          <p>Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. Ne doute jamais de ta valeur.</p>
+        </section>
+
+        <section class="section-block" aria-labelledby="gratitude-title">
+          <h2 id="gratitude-title">Vivre avec gratitude</h2>
+          <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
+          <p>La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.</p>
+        </section>
+      </div>
+
+      <!-- Boutons -->
+      <div class="btn-row" role="region" aria-label="Actions">
+        <a href="coaching.html" class="btn-primary" role="button">Parler à un conseiller</a>
+        <a href="temoignages.html" class="btn-primary btn-secondary" role="button">Lire des témoignages</a>
+      </div>
     </div>
 
-    <div class="flex-row" aria-live="polite">
-      <section class="section-block" aria-labelledby="mission-title">
-        <h2 id="mission-title">Notre mission</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
-        <p>Faire découvrir l’amour de Dieu : pas pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
-      </section>
+    <!-- Colonne droite : Verset du jour -->
+    <aside class="right-column" role="complementary" aria-label="Verset du jour">
+      <h2>Verset du jour</h2>
+      <div id="daily-verse">Chargement du verset...</div>
+    </aside>
 
-      <section class="section-block" aria-labelledby="comme-dieu-title">
-        <h2 id="comme-dieu-title">Comme Dieu te voit</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
-        <p>Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. Ne doute jamais de ta valeur.</p>
-      </section>
-
-      <section class="section-block" aria-labelledby="gratitude-title">
-        <h2 id="gratitude-title">Vivre avec gratitude</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
-        <p>La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.</p>
-      </section>
-    </div>
-
-    <!-- Boutons -->
-    <div class="btn-row" role="region" aria-label="Actions">
-      <a href="coaching.html" class="btn-primary btn-yellow" role="button">Parler à un conseiller</a>
-      <a href="temoignages.html" class="btn-primary btn-green" role="button">Lire des témoignages</a>
-    </div>
-  </main>
+  </div>
 
   <footer>
     &copy; 2025 Coeur Ouvert — <a href="contact.html">Contact</a>
@@ -406,7 +378,7 @@
 
     let options = { threshold: [0.2] };
     let observer = new IntersectionObserver(onEntry, options);
-    document.querySelectorAll('.section-block').forEach(block => {
+    document.querySelectorAll('.section-block, .intro, .btn-row').forEach(block => {
       observer.observe(block);
     });
   </script>
